--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,46 @@
 
 
 {% block body %}
+<div class="container-fluid my-4 px-0" >
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/static/kyle-head-p6rNTdAPbuk-unsplash.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/static/stefano-stacchini-jhPSJDhiRyQ-unsplash.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/static/rob-simmons-Qfsgxw-ZWR0-unsplash.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+  </div>
+</div>
 
+
+
+
+<div class="text-center">
+    <div class="center">
+        <h3>About Us</h3>
+        <p> Magic is the application of beliefs, rituals or actions employed in the belief that they can subdue or manipulate natural or supernatural beings and forces. It is a category into which have been placed various beliefs and practices sometimes considered separate from both religion and science. Being a secretive art , it has gained huge popularity in India . Magician Saransh is a well known magician with several TV appearances and a gazillion of shows pan India. We are a Show Business Company who book shows for Magician Saransh </p>
+    </div>
+        <div class="center">
+        <ul class="list-unstyled footer_contact_info">
+
+            <li>To Know More About Us reach out to us here</li>
+            
+
+            <li><a><span class="fa fa-map-marker" ></span><p>Customer care (Toll free) :- 9437542374 </p></a></li>
+            <li><a><span class="fa fa-map-marker"></span><p>Email:- dassaransh@gmail.com</p></a></li>
+            <li>Office Address :-  <a href="https://www.google.com/search?q=lpu+address&rlz=1C1RLNS_enIN854IN854&oq=lpu+address&aqs=chrome..69i57j0i22i30l9.3705j0j15&sourceid=chrome&ie=UTF-8"><span class="fa fa-phone"></span><p> UNI-MALL , 4TH FLOOR , LOVELY PROFESSIONAL UNIVERSITY,JALANDHAR,PUNJAB.</p></a></li>
+            <li><a ><span class="fa fa-envelope"></span><p>Contact Time: Mon - Sun : 7AM - 9PM</p></a></li>
+        </ul>
+
+        
+    </div>
+</div>
+</div>
 
 {% endblock body %}
 
