--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Magician Saransh</a>
+          <a class="navbar-brand" href="https://www.youtube.com/channel/UCMY3vU8NsLH9tZ7MXEjT26Q">Welcome to Magician Saransh </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,24 +30,37 @@
                   Services
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/services">Stage Shows</a></li>
-                  <li><a class="dropdown-item" href="#">Virtual Shows</a></li>
+                  <li><a class="dropdown-item" href="/contact">Stage Shows</a></li>
+                  <li><a class="dropdown-item" href="/contact">Virtual Shows</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Close Up Shows</a></li>
+                  <li><a class="dropdown-item" href="/contact">Close Up Shows</a></li>
                 </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact Us</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            
           </div>
         </div>
       </nav>
       
+
+
+
+<footer>
+      <div class="footer-copyright text-center" >
+        <p class="wow fadeInRight" data-wow-duration="1s">
+            ®Registered ™Trademark and ©Copyright reserved 
+            <i class="fa fa-heart"></i>
+            of
+            <a target="_blank" href="https://www.instagram.com/magician_saransh_official/">Saransh Magic World</a> 
+            
+        </p>
+    </div>
+</div>
+</footer>
+
 
 
 
