--- a/templates/index.html
+++ b/templates/index.html
@@ -51,24 +51,21 @@
 
 
 
-<div class="container my-3">
 
-    <h1 class="my-4 text-center">Select the Type of Show You Want</h1>
+
+    <h1 class="my-4 text-center">The type of Shows we Provide</h1>
 
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
       <div class="col">
         <div class="card shadow-sm">
           
-            <img src="https://source.unsplash.com/1200x900/?nature,water" class="d-block w-100" alt="...">
+            <img src="/static/stage.jfif" class="d-block w-100" alt="...">
 
 
           <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"> Our Stage Show is the newest and most exciting magic show in the world. Starring Saransh, you will be mesmerized by his sleight of hand and his ability to move objects.  </p>
             <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View Real Show</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Select This Category</button>
-              </div>
+              
               <small class="text-muted">Stage Show</small>
             </div>
           </div>
@@ -76,15 +73,12 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img src="https://source.unsplash.com/1200x900/?nature,water" class="d-block w-100" alt="...">
+            <img src="/static/v.jpg" class="d-block w-100" alt="...">
 
           <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Now, Saransh is bringing love, laughter and positive energy to your screen with interactive online magic shows for teams, employees, clients and families on Zoom and Google Meet.</p></p>
             <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View Real Show</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Select This Category</button>
-              </div>
+              
               <small class="text-muted">Virtual Show</small>
             </div>
           </div>
@@ -92,14 +86,11 @@
       </div>
       <div class="col">
         <div class="card shadow-sm">
-            <img src="https://source.unsplash.com/1200x900/?nature,water" class="d-block w-100" alt="...">
+            <img src="/static/closeup.jpg" class="d-block w-100" alt="...">
           <div class="card-body">
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Saransh has been circling the globe, performing close-up magic and mentalism on TV & stage, and teaching businesses how to Think Like A Magician. </p>
             <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View Real Show</button>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Select This Category</button>
-              </div>
+              
               <small class="text-muted">Close-up Show</small>
             </div>
           </div>
@@ -107,7 +98,7 @@
       </div>
 
     </div>
-  </div>
+  
 
 {% endblock body %}
 
