--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,10 @@
                   Services
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/contact">Stage Shows</a></li>
-                  <li><a class="dropdown-item" href="/contact">Virtual Shows</a></li>
+                  <li><a class="dropdown-item" href="/services">Stage Shows</a></li>
+                  <li><a class="dropdown-item" href="/services">Virtual Shows</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/contact">Close Up Shows</a></li>
+                  <li><a class="dropdown-item" href="/services">Close Up Shows</a></li>
                 </ul>
               </li>
               <li class="nav-item">
