--- a/templates/services.html
+++ b/templates/services.html
@@ -6,6 +6,85 @@
 {% block body %}
 
 
+<section id="service">
+    <div class="container">
+        <h2>Services We Offer</h2>
+        <div class="row">
+            <div class="col-md-4 col-sm-6">
+                <div class="service_item">
+                    <div class="service_photo">
+                        <img src="/static/img/11 (1).jfif" alt="Program" />
+                        <div class="photo_overlay"></div>						
+                    </div>
+                    <div class="service_caption">
+                        <h4><a href="">Close-up Black Magic</a></h4>
+                        <p>by Saransh Das, Jan 15, 2021</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="service_item">
+                    <div class="service_photo">
+                        <img src="/static/img/11 (2).jfif" alt="Program" />
+                        <div class="photo_overlay"></div>						
+                    </div>
+                    <div class="service_caption">
+                        <h4><a href="">Close-up House Party</a></h4>
+                        <p>by Saransh, Jun 15, 2020</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="service_item">
+                    <div class="service_photo">
+                        <img src="/static/img/11 (3).jfif" alt="Program" />
+                        <div class="photo_overlay"></div>						
+                    </div>
+                    <div class="service_caption">
+                        <h4><a href="">Auditorium Stage</a></h4>
+                        <p>by Saransh, oct 24, 2019</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="service_item">
+                    <div class="service_photo">
+                        <img src="/static/img/11 (4).jfif" alt="Program" />
+                        <div class="photo_overlay"></div>						
+                    </div>
+                    <div class="service_caption">
+                        <h4><a href="">Close-up Stage</a></h4>
+                        <p>by Saransh, Sept 25, 2018</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="service_item">
+                    <div class="service_photo">
+                        <img src="/static/img/11 (5).jfif" alt="Program" />
+                        <div class="photo_overlay"></div>						
+                    </div>
+                    <div class="service_caption">
+                        <h4><a href="">Stage at the Magic Castle</a></h4>
+                        <p>by Saransh, Aug 25, 2021</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="service_item">
+                    <div class="service_photo">
+                        <img src="/static/img/11 (6).jfif" alt="Program" />
+                        <div class="photo_overlay"></div>						
+                    </div>
+                    <div class="service_caption">
+                        <h4><a href="">Fantasy Virtual</a></h4>
+                        <p>by Saransh, Feb 11, 2021</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 {% endblock body %}
 
