--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,12 @@
 
 
 {% block body %}
+
+ 
+
+
+
+
 <div class="container-fluid my-4 px-4" >
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -40,6 +46,54 @@
         <h3>About Us</h3>
         <p> Magic is the application of beliefs, rituals or actions employed in the belief that they can subdue or manipulate natural or supernatural beings and forces. It is a category into which have been placed various beliefs and practices sometimes considered separate from both religion and science. Being a secretive art , it has gained huge popularity in India . Magician Saransh is a well known magician with several TV appearances and a gazillion of shows pan India. We are a Show Business Company who book shows for Magician Saransh </p>
     </div>
+        
+</div>
+</div>
+
+
+
+
+
+
+<!-- About -->
+<section id="about">
+  <div class="container">
+      <div class="row">
+
+          <div class="col-md-9">
+              <div class="container">
+                  <img src="/static/img/22 (1).jfif" alt="" class="about_img" />
+                  <h2>Magic Is a Stress Healer</h2>
+
+                  <p> Of course, Music isn’t the only form of art we rely on for emotional release. The Art Of Magic itself is another way of achieving it. Its roots began in 1886, when Swiss art historian Heinrich Wölfflin set out to link art with psychology, suggesting that art carries with it its moods and emotions. To illustrate this, he referenced architecture and the effect that its aesthetics have on us. Eventually, in the 20th century, art therapy as a profession was established. Today, it is gaining traction and rapidly becoming prevalent world over. Art expression and art therapy have been shown to have a variety of benefits such as improving empathy, mindfulness, and the release of emotions. </p>
+
+                  <a href="https://medium.com/@rina.kaurr/the-magic-of-catharsis-636af12edaf6" class="btn know_btn">Know More</a>
+              </div>
+          </div>
+          <div class="col-md-3">
+              <div class="container">
+                  <div class="Magic">
+                      <h3>Art of Magic <span>&xlarr;</span></h3>
+                      <p> Art of Magic has been a leading force in advanced sleight-of-hand since its inception, and it was acquired by Magician Saransh in 2018. We are pleased to announce that the superb back-catalogue at Art of Magic is now fully-integrated into the Vanishing Inc. website. We continue the high standards of both the magic and the production values established by Art of Magic, and we're pleased to welcome the AOM family of creators and customers to our community.</p>
+
+                      <a href="https://en.wikipedia.org/wiki/Magic_(illusion)" class="btn link_btn">Know More</a>
+                  </div>
+                  <div class="yoga_banner">
+                      <img src="/static/img/22.jfif" alt="Magic" class="Magic" />
+                      <div class="photo_overlay"></div>
+                  </div>					
+              </div>
+          </div>
+
+      </div>
+  </div>
+</section><!-- About end-->
+
+
+
+<div class="text-center">
+    
+   
         <div class="center">
         <ul class="list-unstyled footer_contact_info">
 
@@ -55,7 +109,11 @@
         
     </div>
 </div>
-</div>
+
+
+
+
+
 
 {% endblock body %}
 
