--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,23 @@
     <title> {% block title %} {% endblock title %} | Magician Saransh</title>
   </head>
   <body>
+
+
+
+
+    <style>
+      body {
+        background-image: url('/static/img/download.png');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
+      </style>
+
+
+
+
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="https://www.youtube.com/channel/UCMY3vU8NsLH9tZ7MXEjT26Q">Welcome to Magician Saransh </a>
