--- a/templates/services.html
+++ b/templates/services.html
@@ -17,7 +17,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="">Close-up Black Magic</a></h4>
+                        <h4><a href="https://www.instagram.com/tv/COWv6XcFYGd/?utm_source=ig_web_copy_link">Close-up Black Magic</a></h4>
                         <p>by Saransh Das, Jan 15, 2021</p>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="">Close-up House Party</a></h4>
+                        <h4><a href="https://www.instagram.com/reel/CQU7CTeFgjJ/?utm_source=ig_web_copy_link">Close-up House Party</a></h4>
                         <p>by Saransh, Jun 15, 2020</p>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="">Auditorium Stage</a></h4>
+                        <h4><a href="https://www.instagram.com/tv/B5iqUdeJC_2/?utm_source=ig_web_copy_link">Auditorium Stage</a></h4>
                         <p>by Saransh, oct 24, 2019</p>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="">Close-up Stage</a></h4>
+                        <h4><a href="https://www.instagram.com/tv/B3WIt6UAC1n/?utm_source=ig_web_copy_link">Close-up Stage</a></h4>
                         <p>by Saransh, Sept 25, 2018</p>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="">Stage at the Magic Castle</a></h4>
+                        <h4><a href="https://www.instagram.com/tv/CA2v1jGg1aC/?utm_source=ig_web_copy_link">Stage at the Magic Castle</a></h4>
                         <p>by Saransh, Aug 25, 2021</p>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="">Fantasy Virtual</a></h4>
+                        <h4><a href="https://www.instagram.com/tv/CNhV8IpFleX/?utm_source=ig_web_copy_link">Fantasy Virtual</a></h4>
                         <p>by Saransh, Feb 11, 2021</p>
                     </div>
                 </div>
