--- a/templates/about.html
+++ b/templates/about.html
@@ -67,7 +67,8 @@
 
                   <p> Of course, Music isn’t the only form of art we rely on for emotional release. The Art Of Magic itself is another way of achieving it. Its roots began in 1886, when Swiss art historian Heinrich Wölfflin set out to link art with psychology, suggesting that art carries with it its moods and emotions. To illustrate this, he referenced architecture and the effect that its aesthetics have on us. Eventually, in the 20th century, art therapy as a profession was established. Today, it is gaining traction and rapidly becoming prevalent world over. Art expression and art therapy have been shown to have a variety of benefits such as improving empathy, mindfulness, and the release of emotions. </p>
 
-                  <a href="https://medium.com/@rina.kaurr/the-magic-of-catharsis-636af12edaf6" class="btn know_btn">Know More</a>
+                  <a href="https://medium.com/@rina.kaurr/the-magic-of-catharsis-636af12edaf6" class="btn know_btn" ><button type="button" class="btn btn-secondary btn-sm">Know More</button></a>
+                  
               </div>
           </div>
           <div class="col-md-3">
@@ -76,7 +77,7 @@
                       <h3>Art of Magic <span>&xlarr;</span></h3>
                       <p> Art of Magic has been a leading force in advanced sleight-of-hand since its inception, and it was acquired by Magician Saransh in 2018. We are pleased to announce that the superb back-catalogue at Art of Magic is now fully-integrated into the Vanishing Inc. website. We continue the high standards of both the magic and the production values established by Art of Magic, and we're pleased to welcome the AOM family of creators and customers to our community.</p>
 
-                      <a href="https://en.wikipedia.org/wiki/Magic_(illusion)" class="btn link_btn">Know More</a>
+                      <a href="https://en.wikipedia.org/wiki/Magic_(illusion)" class="btn link_btn"><button type="button" class="btn btn-secondary btn-sm">Know More</button></a>
                   </div>
                   <div class="yoga_banner">
                       <img src="/static/img/22.jfif" alt="Magic" class="Magic" />
@@ -89,7 +90,8 @@
   </div>
 </section><!-- About end-->
 
-
+<br>
+<br>
 
 <div class="text-center">
     
@@ -98,11 +100,12 @@
         <ul class="list-unstyled footer_contact_info">
 
             <li>To Know More About Us reach out to us here</li>
+            <br>
             
 
             <li><a><span class="fa fa-map-marker" ></span><p>Customer care (Toll free) :- 9437542374 </p></a></li>
             <li><a><span class="fa fa-map-marker"></span><p>Email:- dassaransh@gmail.com</p></a></li>
-            <li>Office Address :-  <a href="https://www.google.com/search?q=lpu+address&rlz=1C1RLNS_enIN854IN854&oq=lpu+address&aqs=chrome..69i57j0i22i30l9.3705j0j15&sourceid=chrome&ie=UTF-8"><span class="fa fa-phone"></span><p> UNI-MALL , 4TH FLOOR , LOVELY PROFESSIONAL UNIVERSITY,JALANDHAR,PUNJAB.</p></a></li>
+            <li>Office Address :-  <a href="https://www.google.com/search?q=lpu+address&rlz=1C1RLNS_enIN854IN854&oq=lpu+address&aqs=chrome..69i57j0i22i30l9.3705j0j15&sourceid=chrome&ie=UTF-8" style="text-decoration:none" ><span class="fa fa-phone"></span><p> UNI-MALL , 4TH FLOOR , LOVELY PROFESSIONAL UNIVERSITY,JALANDHAR,PUNJAB.</p></a></li>
             <li><a ><span class="fa fa-envelope"></span><p>Contact Time: Mon - Sun : 7AM - 9PM</p></a></li>
         </ul>
 
