--- a/templates/index.html
+++ b/templates/index.html
@@ -14,21 +14,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/static/1.jpg" class="d-block w-100" alt="...">
+            <img src="/static/111 (2).jfif" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>The Best in the Town</h5>
               <p>Won Several National Level Awards </p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/static/2.jpg" class="d-block w-100" alt="...">
+            <img src="/static/111 (4).jfif" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Magician Saransh Is a Television star</h5>
               <p>Made Several  Television Appearances</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/static/1.jpg" class="d-block w-100" alt="...">
+            <img src="/static/111 (3).jfif" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Does all Genres of Magic</h5>
               <p>Be it Stage , Be it Virtual , Be it Close-up.</p>
