--- a/templates/about.html
+++ b/templates/about.html
@@ -44,7 +44,7 @@
 <div class="text-center">
     <div class="center">
         <h3>About Us</h3>
-        <p> Magic is the application of beliefs, rituals or actions employed in the belief that they can subdue or manipulate natural or supernatural beings and forces. It is a category into which have been placed various beliefs and practices sometimes considered separate from both religion and science. Being a secretive art , it has gained huge popularity in India . Magician Saransh is a well known magician with several TV appearances and a gazillion of shows pan India. We are a Show Business Company who book shows for Magician Saransh </p>
+        <p style="font-family:Georgia, serif;"> Magic is the application of beliefs, rituals or actions employed in the belief that they can subdue or manipulate natural or supernatural beings and forces. It is a category into which have been placed various beliefs and practices sometimes considered separate from both religion and science. Being a secretive art , it has gained huge popularity in India . Magician Saransh is a well known magician with several TV appearances and a gazillion of shows pan India. We are a Show Business Company who book shows for Magician Saransh </p>
     </div>
         
 </div>
@@ -79,7 +79,8 @@
 
                       <a href="https://en.wikipedia.org/wiki/Magic_(illusion)" class="btn link_btn"><button type="button" class="btn btn-secondary btn-sm">Know More</button></a>
                   </div>
-                  <div class="yoga_banner">
+                  <div class="magic_banner">
+                    <br>
                       <img src="/static/img/22.jfif" alt="Magic" class="Magic" />
                       <div class="photo_overlay"></div>
                   </div>					
