--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 
 
 
-    <h1 class="my-4 text-center">The type of Shows we Provide</h1>
+    <h1 class="my-4 text-center" style="font-family:Georgia, serif;">The type of Shows we Provide</h1>
 
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
       <div class="col">
