--- a/templates/about.html
+++ b/templates/about.html
@@ -100,7 +100,7 @@
         <div class="center">
         <ul class="list-unstyled footer_contact_info">
 
-            <li>To Know More About Us reach out to us here</li>
+            <li><h6> Know More About Us reach out to us here </h6></li>
             <br>
             
 
@@ -113,5 +113,12 @@
         
     </div>
 </div>
+<div class="container-fluid" style="text-align: center;">
+<a target="blank" href="https://www.youtube.com/channel/UCMY3vU8NsLH9tZ7MXEjT26Q"><img height="40" width="40" src="/static/img/iconmonstr-youtube-5.svg" ></a>
+<a target="blank" href="https://www.instagram.com/magician_saransh_official/"><img height="40" width="40" src="/static/img/iconmonstr-instagram-11.svg" ></a>
+<a target="blank" href="https://www.facebook.com/saransh.das.56/"><img height="40" width="40" src="/static/img/iconmonstr-facebook-5.svg" ></a>
+</div>
+<br>
+<h6 style="text-align: center;">Follow us on our Social Media Handles</h6>
 {% endblock body %}
 
