--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
             ®Registered ™Trademark and ©Copyright reserved 
             <i class="fa fa-heart"></i>
             of
-            <a target="_blank" href="https://www.instagram.com/magician_saransh_official/" style="text-decoration:none">Saransh Magic World</a> 
+            <a target="_blank" href="https://www.instagram.com/magician_saransh_official/" style="text-decoration:none">World of Magic</a> 
             
         </p>
     </div>
