--- a/templates/about.html
+++ b/templates/about.html
@@ -5,8 +5,6 @@
 
 {% block body %}
 
- 
-
 
 
 
@@ -67,7 +65,7 @@
 
                   <p> Of course, Music isn’t the only form of art we rely on for emotional release. The Art Of Magic itself is another way of achieving it. Its roots began in 1886, when Swiss art historian Heinrich Wölfflin set out to link art with psychology, suggesting that art carries with it its moods and emotions. To illustrate this, he referenced architecture and the effect that its aesthetics have on us. Eventually, in the 20th century, art therapy as a profession was established. Today, it is gaining traction and rapidly becoming prevalent world over. Art expression and art therapy have been shown to have a variety of benefits such as improving empathy, mindfulness, and the release of emotions. </p>
 
-                  <a href="https://medium.com/@rina.kaurr/the-magic-of-catharsis-636af12edaf6" class="btn know_btn" ><button type="button" class="btn btn-secondary btn-sm">Know More</button></a>
+                  <a target="blank" href="https://medium.com/@rina.kaurr/the-magic-of-catharsis-636af12edaf6" class="btn know_btn" ><button type="button" class="btn btn-secondary btn-sm">Know More</button></a>
                   
               </div>
           </div>
@@ -77,7 +75,7 @@
                       <h3>Art of Magic <span>&xlarr;</span></h3>
                       <p> Art of Magic has been a leading force in advanced sleight-of-hand since its inception, and it was acquired by Magician Saransh in 2018. We are pleased to announce that the superb back-catalogue at Art of Magic is now fully-integrated into the Vanishing Inc. website. We continue the high standards of both the magic and the production values established by Art of Magic, and we're pleased to welcome the AOM family of creators and customers to our community.</p>
 
-                      <a href="https://en.wikipedia.org/wiki/Magic_(illusion)" class="btn link_btn"><button type="button" class="btn btn-secondary btn-sm">Know More</button></a>
+                      <a target="blank" href="https://en.wikipedia.org/wiki/Magic_(illusion)" class="btn link_btn"><button type="button" class="btn btn-secondary btn-sm">Know More</button></a>
                   </div>
                   <div class="magic_banner">
                     <br>
@@ -121,4 +119,3 @@
 <br>
 <h6 style="text-align: center;">Follow us on our Social Media Handles</h6>
 {% endblock body %}
-
