--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
-    <title> {% block title %} {% endblock title %} | Magician Saransh</title>
+    <link rel="icon" href="/static/img/iconmonstr-magic-6.svg">
+    <title> {% block title %}  {% endblock title %} | Magician Saransh</title>
+    
   </head>
   <body>
 
@@ -30,7 +31,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://www.youtube.com/channel/UCMY3vU8NsLH9tZ7MXEjT26Q">Welcome to Magician Saransh </a>
+          <a class="navbar-brand" target="blank" href="https://www.youtube.com/channel/UCMY3vU8NsLH9tZ7MXEjT26Q">Welcome to Magician Saransh </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -67,10 +68,10 @@
 <footer>
       <div class="footer-copyright text-center" >
         <p class="wow fadeInRight" data-wow-duration="1s">
-            ®Registered ™Trademark and ©Copyright reserved 
+            Registered® Trademark™ and ©Copyright Reserve
             <i class="fa fa-heart"></i>
             of
-            <a target="_blank" href="https://www.instagram.com/magician_saransh_official/" style="text-decoration:none">World of Magic</a> 
+            <a target="_blank" href="https://www.instagram.com/magician_saransh_official/" style="text-decoration:none">Saransh Magic World</a> 
             
         </p>
     </div>
