--- a/templates/services.html
+++ b/templates/services.html
@@ -18,7 +18,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="https://www.instagram.com/tv/COWv6XcFYGd/?utm_source=ig_web_copy_link" style="text-decoration:none" >Close-up Black Magic</a></h4>
+                        <h4><a target="blank" href="https://www.instagram.com/tv/COWv6XcFYGd/?utm_source=ig_web_copy_link" style="text-decoration:none" >Close-up Black Magic</a></h4>
                         <p>by Saransh Das, Jan 15, 2021</p>
                         
                     </div>
@@ -31,7 +31,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="https://www.instagram.com/reel/CQU7CTeFgjJ/?utm_source=ig_web_copy_link" style="text-decoration:none">Close-up House Party</a></h4>
+                        <h4><a target="blank" href="https://www.instagram.com/reel/CQU7CTeFgjJ/?utm_source=ig_web_copy_link" style="text-decoration:none">Close-up House Party</a></h4>
                         <p>by Saransh, Jun 15, 2020</p>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="https://www.instagram.com/tv/B5iqUdeJC_2/?utm_source=ig_web_copy_link" style="text-decoration:none">Auditorium Stage</a></h4>
+                        <h4><a target="blank" href="https://www.instagram.com/tv/B5iqUdeJC_2/?utm_source=ig_web_copy_link" style="text-decoration:none">Auditorium Stage</a></h4>
                         <p>by Saransh, oct 24, 2019</p>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="https://www.instagram.com/tv/B3WIt6UAC1n/?utm_source=ig_web_copy_link" style="text-decoration:none">Close-up Stage</a></h4>
+                        <h4><a target="blank" href="https://www.instagram.com/tv/B3WIt6UAC1n/?utm_source=ig_web_copy_link" style="text-decoration:none">Close-up Stage</a></h4>
                         <p>by Saransh, Sept 25, 2018</p>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="https://www.instagram.com/tv/CA2v1jGg1aC/?utm_source=ig_web_copy_link" style="text-decoration:none">Stage at the Magic Castle</a></h4>
+                        <h4><a target="blank" href="https://www.instagram.com/tv/CA2v1jGg1aC/?utm_source=ig_web_copy_link" style="text-decoration:none">Stage at the Magic Castle</a></h4>
                         <p>by Saransh, Aug 25, 2021</p>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         <div class="photo_overlay"></div>						
                     </div>
                     <div class="service_caption">
-                        <h4><a href="https://www.instagram.com/tv/CNhV8IpFleX/?utm_source=ig_web_copy_link" style="text-decoration:none" >Fantasy Virtual</a></h4>
+                        <h4><a target="blank" href="https://www.instagram.com/tv/CNhV8IpFleX/?utm_source=ig_web_copy_link" style="text-decoration:none" >Fantasy Virtual</a></h4>
                         
                         <p>by Saransh, Feb 11, 2021</p>
                     </div>
