--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,5 +42,14 @@
 
 </div>
     
+<div class="container-fluid">
+    <h4 style="text-align: center;">You can also Directly Book Shows by Paying us Here</h4>
+<form style="text-align: center;">
+<script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HVZBaxEtLHbSuZ" async> </script> 
+</form>
+</div>
+<br>
+
+
 {% endblock body %}
 
