--- a/templates/base.html
+++ b/templates/base.html
@@ -43,15 +43,8 @@
               <li class="nav-item">
                 <a class="nav-link" href="/about">About Us</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="/services" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/services">Stage Shows</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/services">Virtual Shows</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/services">Close Up Shows</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link" href="/services" >Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact Us</a>
