Added minor changes

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,10 +44,14 @@
     
 <div class="container-fluid">
     <h4 style="text-align: center;">You can also Directly Book Shows by Paying us Here</h4>
+    <br>
+    
 <form style="text-align: center;">
 <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HVZBaxEtLHbSuZ" async> </script> 
 </form>
 </div>
+<br>
+<p style="text-align: center;">We accept all payment options including UPI</p>
 <br>
 
 
